Removed cringe text and added based discord join button

--- a/templates/stall.html
+++ b/templates/stall.html
@@ -90,9 +90,9 @@
                 <div class="instructions-card">
                     <h3>Leave a Review</h3>
                     <p>You can leave a review of this stall by joining the furryville Discord and running /review!</p>
-                    <div class="discord-info">
-                        <p class="instructions-text">Share your experience and help other shoppers discover great stalls!</p>
-                    </div>
+                        <button class="discord-join-btn" onclick="window.open('https://discord.gg/FnuupnnhHJ', '_blank')">
+                            JOIN
+                        </button>
                 </div>
             </div>
         </section>
