--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,4 +1,4 @@
     <footer>
-        <p>Site still in Beta!</p>
+        <p>This site is under constant development and is always improving!</p>
         <p>&copy; 2025 Furryville. Developed and maintained by Postman67</p>
     </footer>
