--- a/static/css/style.css
+++ b/static/css/style.css
@@ -393,6 +393,11 @@ body {
     box-shadow: inset 0 0 0 2px rgba(255, 215, 0, 0.3);
 }
 
+/* Non-clickable rows should have default cursor */
+.shop-table tbody tr:not(.clickable-row) {
+    cursor: default;
+}
+
 .shop-table tbody tr:nth-child(even) {
     background-color: rgba(255, 255, 255, 0.05);
 }
