Added postman67 to the about :aga:

--- a/templates/about.html
+++ b/templates/about.html
@@ -100,6 +100,23 @@
                 </ul>
             </div>
         </section> -->
+        <section class="staff-section">
+            <h2>Developer</h2>
+            
+            <div class="staff-grid">
+                <div class="staff-card">
+                    <div class="staff-banner" style="background-image: url('https://cdn.discordapp.com/banners/288742669054640128/a_50ddb99473628552b1abca17564f0b40.gif?size=1024');"></div>
+                    <div class="staff-avatar">
+                        <img src="https://cdn.discordapp.com/avatars/288742669054640128/a_093bc979da1ff0cfafdc7f70de87519e.gif?size=1024" alt="Staff Avatar" class="avatar-image">
+                    </div>
+                    <div class="staff-info">
+                        <h3 class="staff-name">Postman67</h3>
+                        <p class="staff-title">Founder of Furryville South West & Owner of The Mall</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </main>
 
     {% include 'footer.html' %}
