--- a/templates/about.html
+++ b/templates/about.html
@@ -111,7 +111,7 @@
                     </div>
                     <div class="staff-info">
                         <h3 class="staff-name">Postman67</h3>
-                        <p class="staff-title">Founder of Furryville South West & Owner of The Mall</p>
+                        <p class="staff-title">Support me at buymeacoffee.com/postman67</p>
                     </div>
                 </div>
             </div>
