--- a/templates/header.html
+++ b/templates/header.html
@@ -1,7 +1,11 @@
     <header>
         <nav class="navbar">
             <div class="nav-container">
-                <h1 class="nav-title">🐾 Furryville</h1>
+                <a href="{{ url_for('home') }}" class="nav-title-link">
+                    <h1 class="nav-title">
+                        <img src="{{ url_for('static', filename='images/city-logo-NB.png') }}" alt="Furryville Logo" class="nav-logo"> Furryville
+                    </h1>
+                </a>
                 <ul class="nav-menu">
                     <li><a href="{{ url_for('home') }}" {% if request.endpoint == 'home' %}class="active"{% endif %}>Home</a></li>
                     <li><a href="{{ url_for('warp_hall') }}" {% if request.endpoint == 'warp_hall' %}class="active"{% endif %}>The Warp Hall</a></li>
