--- a/templates/header.html
+++ b/templates/header.html
@@ -1,4 +1,7 @@
     <header>
+        <!-- Cube Animation Styles -->
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/cube-animation.css') }}">
+        
         <nav class="navbar">
             <div class="nav-container">
                 <a href="{{ url_for('home') }}" class="nav-title-link">
@@ -15,4 +18,7 @@
                 </ul>
             </div>
         </nav>
+        
+        <!-- Cube Animation Script -->
+        <script src="{{ url_for('static', filename='js/cube-animation.js') }}"></script>
     </header>
